# empress

./: Cargo.toml  README.MD  com.github.toasterrepair.empress.json  flake.nix
resources/: com.github.toasterrepair.empress.desktop  empress.desktop
scripts/: build-flatpak.sh
src/: main.rs  mpris_client.rs  progress_ring_button.rs  ui.rs
