[package]
name = "empress"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
mpris = "2.0"
glib = "0.20"
gio = "0.20"
gdk = { version = "0.9", package = "gdk4" }
gdk-pixbuf = "0.20"
anyhow = "1.0"
